<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageButton
        android:id="@+id/arrowButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/arrow_description"
        android:src="@drawable/arrow_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/namePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/interest"
        android:textAppearance="@style/text_view_page_name"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <!-- Utilisez une Guideline pour centrer le contenu verticalement -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <!-- Conteneur pour les CheckBox -->
    <LinearLayout
        android:id="@+id/checkbox_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/vertical_center"
        app:layout_constraintBottom_toBottomOf="@+id/vertical_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_child_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothing"
            style="@style/checkbox"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_child_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toy"
            style="@style/checkbox"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_child_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragrance"
            style="@style/checkbox"/>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConnection"
        style="@style/extended_button_blue"
        android:layout_marginBottom="24dp"
        android:text="@string/Inscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_container"/>
</androidx.constraintlayout.widget.ConstraintLayout>