<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_without_background" />

    <TextView
        android:id="@+id/namePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/Profile"
        android:textAppearance="@style/text_view_page_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePage"
        app:layout_constraintVertical_bias="0.087">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileLastName"
            style="@style/text_input_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_lastname"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/edit_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_place_holder"
                android:inputType="none"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFirstName"
            style="@style/text_input_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_firstname"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/edit_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_place_holder"
                android:inputType="none"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileMailName"
            style="@style/text_input_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_mail"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/edit_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_place_holder"
                android:inputType="none"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profilePassword"
            style="@style/text_input_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/edit_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_place_holder"
                android:inputType="none"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileZipCode"
            style="@style/text_input_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_zip_code"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/edit_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_place_holder"
                android:inputType="none"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditInterestCenter"
        style="@style/extended_button_blue"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/edit_my_interests"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonManageOrder"
        style="@style/extended_button_blue"
        android:text="@string/manage_my_orders"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditInterestCenter" />

    <include
        android:id="@+id/includeNavBar"
        layout="@layout/supplier_bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>