<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/arrowButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/arrow_description"
        android:src="@drawable/arrow_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/Connection"
        android:textAppearance="@style/text_view_page_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <LinearLayout
        android:id="@+id/linearLayoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowButton"
        app:layout_constraintVertical_bias="0.348">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRole"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLastName"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConnection"
        style="@style/extended_button_blue"
        android:layout_marginTop="52dp"
        android:text="@string/to_connect"
        app:layout_constraintBottom_toTopOf="@+id/buttonForgottenPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInput"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonForgottenPassword"
        style="@style/underline_text_button"
        android:layout_marginBottom="68dp"
        android:text="@string/ForgottenPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInput"
        app:layout_constraintVertical_bias="0.545" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateAccount"
        style="@style/extended_button_orange"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForgottenPassword"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>