<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageButton
        android:id="@+id/arrowButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/arrow_description"
        android:src="@drawable/arrow_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/Inscription"
        android:textAppearance="@style/text_view_page_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowButton">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRole"
            style="@style/text_input_layout_dropdown_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_role">

            <AutoCompleteTextView
                android:id="@+id/editRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/role"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLastName"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_lastname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFirstName"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_firstname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputMail"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_mail"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPassword"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputZipCode"
            style="@style/text_input_layout_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_zip_code"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConnection"
        style="@style/extended_button_blue"
        android:layout_marginBottom="24dp"
        android:text="@string/Inscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
</androidx.constraintlayout.widget.ConstraintLayout>