<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/icon_without_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateAccount"
        style="@style/extended_button_orange"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConnection"
        style="@style/extended_button_blue"
        android:text="@string/to_connect"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginBottom="100dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
